--- a/Lolin-TFT-2.4/platformio.ini
+++ b/Lolin-TFT-2.4/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
+lib_deps = 
+  Adafruit ILI9341
+  XPT2046_Touchscreen
+  TFT_eSPI
+monitor_speed = 115200
